# llmc

./: Cargo.toml  README.md  install.sh  models.json  setup_bash.sh  setup_zsh.sh  uninstall.sh
.github/workflows/: release.yml
src/: main.rs
