[package]
name = "llmc"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
